display lessons for deleted users
