# apps/api/src/student/dto/student-response.dto.ts
@@ -18,4 +18,7 @@ export class StudentResponseDto {
 
   @ApiProperty()
   notes: string
+
+  @ApiProperty({ type: String, nullable: true })
+  deletedAt: string | null
 }
